# Echo

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  nginx_example.conf  railway.toml  render.yaml  rust.md
.github/workflows/: backend-ci.yml  release.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-155d2c332260754a1667f7c87f4211c5d50433dd1407fb2eb50f186489861311.json  query-28ff5e901fae02ee6172355e095af29829fe0aa9a0f1ae61235a9028a11506ae.json  query-2b58a8b0a857d3dee96b2ad72182999656afab5e8bd0dde1972cfadd56f8b84c.json  query-30a996defd79637fad2285a37b1821ef84c9b875841606675a4c835f34ae579b.json  query-4549971dce96d2b15103bc57720002629e516c182d88132769d11f3bb07173f5.json  query-84fffcc19825c09247a2714a2f737c50a4ad2f04cc1dc58eca8cc3b28c31dc8c.json  query-87579cdf700394babdd91e3f5f45a298ecdbfa79cb856981b095f2fa4ab8415b.json  query-b1c0d3a5d5295031ad6ff39d428e3eca078a56127546ff0340c603758842aabf.json  query-c756830ab1dfa52312404b210968fa8742703068f293a7fe2f384c586af99117.json  query-d3605722645592d3bc80d4ee2d1fa0c81650dfb1c8025ec3bc32c7111ccf756d.json  query-d391bd08a80808b076c7009c57d72379494e001581c39b438b4f415734702bec.json
backend/benches/: broadcast.rs  rate_limiting.rs
backend/migrations/: 20251222000000_add_push_tokens.sql  20260109000000_add_clipboard_history.sql  20260110000001_add_indexes.sql  20260422000000_normalize_push_tokens.sql
backend/src/: auth.rs  config.rs  db.rs  dto.rs  error.rs  handler.rs  main.rs  middleware.rs  models.rs  protocol.rs  push.rs  state.rs  tests.rs  types.rs
backend/src/handlers/: auth.rs  history.rs  mod.rs  ws.rs
backend/src/state/: mod.rs  push_manager.rs  rate_limit.rs  sync.rs
desktop/: .gitignore  README.md  dashboard_additions.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.css  App.tsx  Fingerprint.css  KeyStyles.css  api.ts  config.ts  crypto.ts  main.tsx  protocol.ts  tokens.css  types.ts  vite-env.d.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  mobile.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: clipboard.rs  lib.rs
desktop/src/components/: Icons.tsx
desktop/src/components/auth/: AuthLayout.tsx  DeviceSetup.tsx  Login.tsx  Onboarding.tsx  Register.tsx  index.ts
desktop/src/components/desktop/: Main.tsx  (+1 more)
desktop/src/contexts/: LanguageContext.tsx  ThemeContext.tsx  ToastContext.tsx
desktop/src/hooks/: index.ts  useAuth.ts  useClipboard.ts  useDevices.ts  useEchoController.ts  useKeys.ts  useLatest.ts  usePullToRefresh.ts  usePushNotifications.ts  useWebSocket.ts
desktop/src/i18n/: translations.ts
desktop/src/utils/: AppError.ts  deviceName.ts  haptics.ts  index.tsx
docs/: privacy-policy.html
(+32 files in other folders)
