[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Echo — real-time clipboard sync server."
license = "MIT OR Apache-2.0"

[dependencies]
argon2 = "0.5.3"
rand = "0.9.2"
jsonwebtoken = "9.3.0"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
serde      = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.1.0"
dotenvy = "0.15.7"
parking_lot = "0.12"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "rate_limiting"
harness = false

[[bench]]
name = "broadcast"
harness = false