[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-haptics = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
arboard = "3.4"
tauri-plugin-single-instance = "2"

[profile.release]
lto = true            # Link-time optimization
strip = true          # Strip debug symbols
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Smaller binary, no unwinding
opt-level = "z"       # Optimize for size


